--- a/CollectionManager.API/CollectionManager.API/CollectionManager.API.Data/CollectionManager.API.Data.csproj
+++ b/CollectionManager.API/CollectionManager.API/CollectionManager.API.Data/CollectionManager.API.Data.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CollectionManager.API.Domain\CollectionManager.API.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
