--- a/CollectionManager.API/CollectionManager.API/CollectionManager.API/appsettings.json
+++ b/CollectionManager.API/CollectionManager.API/CollectionManager.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+      "CollectionManagerConnectionString" : "Server=(local);Database=CollectionManager;Trusted_Connection=True;TrustServerCertificate=True;"
+    }
+  }
