--- a/CollectionManager.API/CollectionManager.API/CollectionManager.API.Services/CollectionManager.API.Services.csproj
+++ b/CollectionManager.API/CollectionManager.API/CollectionManager.API.Services/CollectionManager.API.Services.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CollectionManager.API.Common\CollectionManager.API.Common.csproj" />
+    <ProjectReference Include="..\CollectionManager.API.Domain\CollectionManager.API.Domain.csproj" />
+    <ProjectReference Include="..\CollectionManager.API.Models\CollectionManager.API.Models.csproj" />
+    <ProjectReference Include="..\CollectionManager.API.Repository\CollectionManager.API.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
